
  * cupt
    - 'why': if received only one argument, assume --installed-only.
      Thanks to James Vega for spotting. (Closes: #577646)
  * Cupt:
    - Download:
      - Manager:
        - Use ITIMER_VIRTUAL instead of ITIMER_REAL for ping signals.
        - Use dedicated pipe in ping signal handler. I believe, it
          Closes: #554620. Many thanks to James Vega.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 09 Apr 2010 23:03:21 +0300

cupt (1.5.9) unstable; urgency=low

  * cupt:
    - help:
      - Clarified that 'safe-upgrade' command can remove automatically
        installed packages. Thanks to intrigeri@boum.org. (Closes: #575702)
    - Action preview prompt:
      - Display a warning in case of packages on hold to be modified.
  * Cupt:
    - Cache:
      - 'get_pin': obey version holds by default by honoring new
        'cupt::cache::obey-hold' option. Thanks to intrigeri@boum.org.
        (Closes: #575704)
      - Package:
        - Don't check binary architecture for installed packages. Thanks to
          Julian Andres Klode for the report. (Closes: #574819)
    - Config:
      - ISCConfigParser:
        - Allow '.' character in option names. Thanks to intrigeri@boum.org.
          (Closes: #575715)
      - Recognize 'apt::get::build-dep-automatic' option.
      - New 'cupt::cache::obey-hold' option.
    - System:
      - Worker:
        - Set the process umask to 022. Thanks to intrigeri@boum.org.
          (Closes: #575700)
    - Download:
      - Method:
        - 'get_acquire_suboption_for_uri': setting
          'acquire::<protocol>::[<host::]proxy' to "DIRECT" to disable it
          is now supported too.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 03 Apr 2010 17:56:29 +0300

cupt (1.5.8) unstable; urgency=low

  * Cupt:
    - Cache:
      - Fixed potential crash if some chunk in the index file doesn't contain
        valid Package line.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 20 Mar 2010 15:57:19 +0200
